# bunnyland-plugin-dreamsim

./: README.md
.github/workflows/: ci.yml
server/: README.md  pyproject.toml
server/src/bunnyland_dreamsim/: __init__.py  commands.py  components.py  composer.py  conditions.py  connectors.py  dreams.py  events.py  foreshadow.py  fragments.py  install.py  integration_3d.py  motifs.py  plugin.py  prefabs.py  rest.py  sanity.py
server/tests/: test_commands.py  test_composer.py  test_conditions.py  test_connectors.py  test_dreams.py  test_dreams_v2.py  test_foreshadow.py  test_fragments.py  test_motifs.py  test_plugin.py  test_rest.py  test_sanity.py
