[project]
name = "bunnyland-dreamsim"
version = "0.2.0"
description = "Out-of-tree Bunnyland plugin: a sleep & dreams pack (deterministic dreams, insight/omen, nightmares, and rest quality)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bunnyland",
    "pydantic>=2.0",
    "relics",
]

[project.optional-dependencies]
3d = ["bunnyland-3d>=0.3.0"]

[project.entry-points."bunnyland.plugins"]
"bunnyland.dreamsim" = "bunnyland_dreamsim.plugin:bunnyland_plugins"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bunnyland_dreamsim"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
